Surely this fixes the spacing issue

--- a/src/styles/sections/Starter.scss
+++ b/src/styles/sections/Starter.scss
@@ -29,7 +29,7 @@
     .row-container {
       display: flex;
       width: 40%;
-      justify-content: space-around;
+      justify-content: space-between;
       align-items: center;
       .section1 {
         text-align: center;
